Add stylesheet and template compilation for admin

--- a/src/admin/styles/admin.scss
+++ b/src/admin/styles/admin.scss
@@ -1,4 +1,4 @@
-@import "bootstrap-sass-official";
+@import "../bower_components/bootstrap-sass/assets/stylesheets/_bootstrap.scss";
 @import "edit";
 
 // Normalizing styles
