--- a/src/admin/styles/admin.scss
+++ b/src/admin/styles/admin.scss
@@ -1,5 +1,6 @@
 @import "../bower_components/bootstrap-sass/assets/stylesheets/_bootstrap.scss";
 @import "edit";
+@import "form";
 
 // Normalizing styles
 dl {
