--- a/src/admin/templates/content-blocks/form.slim
+++ b/src/admin/templates/content-blocks/form.slim
@@ -17,23 +17,12 @@ form#block-form
 		input.version type="number" min="1" ng-model="block.version"
 	.form-group
 		label for="status" Status
-		select.form-control.status ng-model="block.status"
+		ng-select.form-control.status ng-model="block.status"
 			option value="unpublished" Unpublished
 			option value="published" Published
 	.form-group
 		label for="body" Body
-		textarea.body ng-model="block.body"
-	#editor
-		|  {{ block.body }}
+		#body-editor ui-ace="{onLoad: onAceLoaded, onChange: onAceChanged, mode: 'html', theme: 'monokai'}"
 	.form-group
 		label for="layout" Layout Block Slug
 		input.layout ng-model="block.layout_block_slug"
-script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.1.3/ace.js"
-script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.1.3/mode-html.js"
-script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.1.3/mode-html_completions.js"
-javascript:
-	$(function(){
-		var editor = ace.edit("editor");
-		editor.setTheme("ace/theme/chrome");
-		editor.getSession().setMode("ace/mode/html");
-	})
