Switch back to vanilla select on content block edit form

--- a/src/admin/templates/content-blocks/form.slim
+++ b/src/admin/templates/content-blocks/form.slim
@@ -17,7 +17,7 @@ form#block-form
 		input.version type="number" min="1" ng-model="block.version"
 	.form-group
 		label for="status" Status
-		ng-select.form-control.status ng-model="block.status"
+		select.form-control.status ng-model="block.status"
 			option value="unpublished" Unpublished
 			option value="published" Published
 	.form-group
