added preview buttons on edit, new, and list

--- a/src/admin/styles/admin.scss
+++ b/src/admin/styles/admin.scss
@@ -55,3 +55,9 @@ input, textarea {
   @extend .btn;
   @extend .btn-danger;
 }
+
+.preview-block-button {
+  @extend .btn;
+  @extend .btn-success;
+}
+
