--- a/src/admin/templates/content-blocks/edit.slim
+++ b/src/admin/templates/content-blocks/edit.slim
@@ -1,3 +1,13 @@
 #content-block-wrapper
-	ng-include src="'/assets/content_blocks/form.html'"
+	a.return-to-list-block-button ng-href="#/content-blocks"
+		i.fa.fa-hand-o-left
+		| &nbsp; Return to List
+    ng-include src="'/assets/content_blocks/form.html'"
 	button.save-button ng-click="save()" Save
+	button.preview-block-button ng-click="preview()"
+		i.fa.fa-search
+		| &nbsp; Preview
+
+	a.return-to-list-block-button ng-href="#/content-blocks"
+		i.fa.fa-hand-o-left
+		| &nbsp; Return to List
