Show gutter in ace editor and switch to chrome theme

--- a/src/admin/templates/content-blocks/form.slim
+++ b/src/admin/templates/content-blocks/form.slim
@@ -22,7 +22,7 @@ form#block-form
 			option value="published" Published
 	.form-group
 		label for="body" Body
-		#body-editor ui-ace="{onLoad: onAceLoaded, onChange: onAceChanged, mode: 'html', theme: 'monokai'}"
+		#body-editor ui-ace="{onLoad: onAceLoaded, onChange: onAceChanged, mode: 'html', theme: 'chrome'}"
 	.form-group
 		label for="layout" Layout Block Slug
 		input.layout ng-model="block.layout_block_slug"
