--- a/src/admin/templates/content-blocks/new.slim
+++ b/src/admin/templates/content-blocks/new.slim
@@ -1,13 +1,10 @@
 #content-block-wrapper
-	a.return-to-list-block-button ng-href="#/content-blocks"
-		i.fa.fa-hand-o-left
-		| &nbsp; Return to List
-
     ng-include src="'/assets/content_blocks/form.html'"
-	button.save-button ng-click="save()" Create
-	button.preview-block-button ng-click="preview()"
-		i.fa.fa-search
-		| &nbsp; Preview
-	a.return-to-list-block-button ng-href="#/content-blocks"
-		i.fa.fa-hand-o-left
-		| &nbsp; Return to List
+	.form-buttons
+		button.save-button ng-click="save()" Create
+		button.preview-block-button ng-click="preview()"
+			i.fa.fa-search
+			| &nbsp; Preview
+		a.return-to-list-block-button ng-href="#/content-blocks"
+			i.fa.fa-hand-o-left
+			| &nbsp; Return to List
