--- a/src/admin/templates/content-blocks/form.slim
+++ b/src/admin/templates/content-blocks/form.slim
@@ -31,6 +31,9 @@ css:
 		label for="precache"
 			|  Pre-Cache
 		input.precache type="checkbox" ng-model="block.precache"		
+		.form-group
+			label for="controller" Controller
+			input.controller ng-model="block.controller"
 		.form-group.body-editor
 			label for="body" Body
 			#body-editor ng-controller="AceEditor" ui-ace="{onLoad: onAceLoaded, onChange: onAceChanged, mode: 'html', theme: 'chrome'}"
