--- a/src/admin/templates/content-blocks/form.slim
+++ b/src/admin/templates/content-blocks/form.slim
@@ -3,6 +3,7 @@ css:
 		height: 300px;
 		width: 100%;
 	}
+#header ng-include="'/assets/header.html'"
 #content-block-wrapper
 	h1
 		|  {{ block.title }}
