--- a/src/admin/templates/content-blocks/list.slim
+++ b/src/admin/templates/content-blocks/list.slim
@@ -1,3 +1,4 @@
+#header ng-include="'/assets/header.html'"
 #content-block-list-wrapper
 	h1 Content Blocks
 	a#create-new-button href="#/content-blocks/new" 
